--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
 /* Table of Contents
 
-1. Base
-2. Typography
-3. Lists
-4. Structure
+	- Reset
+	- Frame
+	- Base
+	- Typography
+	- Lists
+	- Hacks & Presets
+	- Structure
+	- Footer Content
+	- Footer Socket
 
 */
 
@@ -72,12 +77,12 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom:15px;
 }
 
-h1 { font-size:40px;}
-h2 { font-size:28px;}
-h3 { font-size:21px;}
-h4 { font-size:18px;}
-h5 { font-size:17px;}
-h6 { font-size:15px;}
+h1 { font-size:2.5em;}
+h2 { font-size:1.750em;}
+h3 { font-size:1.313em;}
+h4 { font-size:1.125em;}
+h5 { font-size:1.063em;}
+h6 { font-size:0.938em;}
 
 /*--- Lists ---*/
 
@@ -129,12 +134,12 @@ button.large {
 
 button.small {
 	padding: 10px 15px;
-	font-size: 14px;
+	font-size: 0.875em;
 }
 
 button.smaller {
 	padding: 5px 10px;
-	font-size: 12px
+	font-size: 0.750em;
 }
 
 .white-btn {
@@ -174,7 +179,7 @@ button.smaller {
 
 #footer-widgets input[type="email"] {
 	padding: 10px;
-	font-size: 16px;
+	font-size: 1em;
 	border: 2px solid transparent;
 	margin-bottom: 10px;
 		-webkit-transition: all 0.3s linear;
@@ -182,8 +187,9 @@ button.smaller {
 	-o-transition: all 0.3s linear;
 	transition: all 0.3s linear;
 	border-radius: 6px 0 0 6px;
-	width: 134px;
+	width: 65.686275%;
 	margin: 0;
+	float: left;
 }
 
 #footer-widgets input[type="email"]:focus {
@@ -204,13 +210,13 @@ button.smaller {
 	border: none;
 	color: #fff;
 	padding: 13px 8px;
-	font-size: 12px;
+	font-size: 0.750em;
 	font-weight: bold;
 	text-transform: uppercase;
 	margin-left: -4px;
-	float: right;
+	float: left;
 	height: 42px;
-	width: 70px;
+	width: 34.313725%;
 	cursor: pointer;
 }
 
@@ -226,12 +232,12 @@ button.smaller {
 }
 
 
-
-
 /*--- Structure ---*/
 
 .container {
-	width:960px;
+	width:100%;
+	max-width:980px;
+	padding: 0 20px;
 	margin: 0 auto;
 	overflow: hidden;
 }
@@ -242,16 +248,16 @@ button.smaller {
 
 .one-third {
 	overflow: hidden;
-	width: 282px;
+	width: 29.375%; /* 282px */
 	float: left;
-	margin: 0 48px 10px 0;
+	margin: 0 5.208333% 10px 0;
 }
 
 .one-fourth {
 	overflow: hidden;
-	width: 204px;
+	width: 21.25%; /* 204px */
 	float: left;
-	margin: 0 48px 10px 0;
+	margin: 0 5% 10px 0;
 }
 
 .last {
@@ -273,6 +279,7 @@ nav {
 	margin-top: 65px;
 }
 
+
 nav ul li {
 	display: inline-block;
 	color:#333;
@@ -283,6 +290,9 @@ nav ul li a {
 	margin: 0 7px;
 	color:#555;
 	border: 1px solid transparent;
+	border-radius: 6px;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
 	
 }
 
@@ -303,14 +313,14 @@ nav a.current {
 
 #main-cta {
 	background: url("../images/slide-1.jpg") no-repeat center center white;
-	background-size: 100%;
+	background-size: cover;
     overflow:hidden;
     margin: 20px 0;
 }
 
 #sliderText {
     margin-top:90px;
-	width:500px;
+	width:52.083333%; /* 500px */
 }
 
 #sliderText h2 {
@@ -321,10 +331,8 @@ nav a.current {
     color:#fff;
 }
 
-		
-
 #ctaBox {
-	width:300px;
+	width:31.25%; /* 300px */
 	background: rgba(0,0,0,0.5);
 	color: #fff;
 	padding: 20px;
@@ -409,8 +417,6 @@ footer {
 	overflow: hidden;
 }
 
-
-
 .gallery li a:hover {
 	border:2px solid #006666;
 }
@@ -418,7 +424,7 @@ footer {
 .socialLinks li a {
 	overflow: hidden;
 	float: left;
-	width: 43px;
+	width: 42px;
 	margin-right: 6px;
 	
 }
@@ -434,7 +440,7 @@ footer {
   display: block;
 }
 
-/*-- Socket --*/
+/*-- Footer Socket --*/
 
 #socket {
 	border-top: 1px solid #222;
@@ -467,3 +473,54 @@ footer {
 	border:none;
 	color:#fff;
 }
+
+
+/* Media Queries */
+
+
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+	header {text-align: center;}
+	header .logo {float: none;}
+	header nav {margin:20px 0; border: 1px solid #e1e1e1; border-radius: 6px; border-radius:6px !important; -moz-border-radius:6px !important; -webkit-border-radius:6px !important; overflow: hidden;}
+	header nav ul li {width: 100%; border-bottom: 1px solid #e1e1e1;}
+	header nav ul li a {border:none;padding: 20px; display: block; margin: 0; border-radius:0 !important; -moz-border-radius:0 !important; -webkit-border-radius:0 !important;}
+	header nav ul li a.current {border:none; background: #222; width:100%;display: block;color:#fff; border-radius:0 !important; -moz-border-radius:0 !important; -webkit-border-radius:0 !important;}
+	header nav ul li a:hover {border:none; background: #006666; color:#fff;}
+	
+	.one-third, .one-fourth {margin: 20px 0;width:100% !important;}
+	.one-third:first-child, .one-fourth:first-child {margin-top:0px;}
+	#ctaBox ul li {width:100% !important; text-align: left !important; margin: 0 !important;}
+	#ctaBox ul li img {float: left !important; margin-right:20px !important;}
+	#socket { text-align: center;}
+	#socket nav a {margin:0 2px;}
+	#socket nav {width: 100%;}
+	#socket .copyright {margin-top: 10px;display: inline-block;}
+	
+}
+
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {
+	.one-fourth {width:47.502576828%;}
+	.one-fourth:nth-child(2), .one-fourth:nth-child(4) {margin-right: 0;}
+	#ctaBox {width:100%; margin: 20px auto;}
+	#ctaBox ul li {display: inline-block; margin: 0 2.507375%; text-align: center; width: 20.704846%;}
+	#ctaBox ul li:first-child {margin-left:0;}
+	#ctaBox ul li:last-child {margin-right:0;}
+	#ctaBox ul li img {float: none; margin: 0 auto 15px;}
+	#ctaBox ul li h3 {font-size: 1.213em;}
+	#sliderText {width:100%; display: none;}
+}
+
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) {
+
+}
+
+/* Large desktop */
+@media (min-width: 1200px) {
+	
+}
+
+
