--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 	- Lists
 	- Hacks & Presets
 	- Structure
+	- Sections
 	- Footer Content
 	- Footer Socket
 
@@ -83,6 +84,18 @@ h3 { font-size:1.313em;}
 h4 { font-size:1.125em;}
 h5 { font-size:1.063em;}
 h6 { font-size:0.938em;}
+
+.red {
+	color:#ff0000;
+}
+
+.green {
+	color:#006666;
+}
+
+.section-title {
+	margin-bottom: 50px;
+}
 
 /*--- Lists ---*/
 
@@ -253,6 +266,13 @@ button.smaller {
 	margin: 0 5.208333% 10px 0;
 }
 
+.two-third {
+	overflow: hidden;
+	width: 58.75%; /* 564px */
+	float: left;
+	margin: 0 5.208333% 10px 0;
+}
+
 .one-fourth {
 	overflow: hidden;
 	width: 21.25%; /* 204px */
@@ -369,6 +389,175 @@ nav a.current {
 #main-columns .one-third h3 {
 	line-height: 45px;
 }
+
+/*--- Sections ---*/
+
+#free-trial {
+	background:#fff;
+	border-top: 1px solid #e1e1e1;
+	border-bottom: 1px solid #e1e1e1;
+	padding: 30px 0;
+}
+
+#free-trial hgroup {
+	text-align: center;
+}
+
+/* table */
+
+#free-trial table {
+	width: 99%;
+	outline: none;
+	border-collapse: collapse;
+}
+
+#free-trial table tbody {
+}
+
+#free-trial table tr {
+	padding: 12px 0;
+}
+
+#free-trial table tr th.dark {
+	background: #222;
+}
+
+#free-trial table tr:nth-child(even) {
+	background: #fff;
+}
+
+#free-trial table tr th {
+	color: #fff;
+	padding: 20px 0;
+	vertical-align: middle;
+	width: 100px;
+}
+
+#free-trial table tr th.featured {
+	background: #006666;
+}
+
+#free-trial table tr th .price {
+    display: block;
+    font-weight: bold;
+    font-size: 35px;
+    margin-top: 10px;
+    padding: 10px 0;
+}
+
+#free-trial table tr th .price small {
+	font-size: 16px;
+}
+
+#free-trial table tr td {
+    padding: 10px;
+	border-right: 1px solid #ccc;
+}
+
+#free-trial tr td.pricing {
+	
+}
+
+#free-trial tr td.pricing span.price {
+}
+
+/* form */
+
+#free-trial form {
+	
+}
+
+#free-trial form div {
+    margin: 20px 0;
+	
+}
+
+#free-trial form label {
+	
+}
+
+#free-trial form input[type="text"]:focus, #free-trial form input[type="email"]:focus, #free-trial form textarea:focus {
+    border:1px solid #006666;
+    outline: none;
+}
+
+#free-trial form input[type="text"] {
+	-webkit-transition: all 0.3s linear;
+	-moz-transition: all 0.3s linear;
+	-o-transition: all 0.3s linear;
+	transition: all 0.3s linear;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    background: #fff;
+}
+
+#free-trial form input[type="email"] {
+	-webkit-transition: all 0.3s linear;
+	-moz-transition: all 0.3s linear;
+	-o-transition: all 0.3s linear;
+	transition: all 0.3s linear;
+	display: block;
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    background: #fff;
+}
+
+#free-trial form input[type="submit"] {
+	background: #006666;
+	border:2px solid #fff;
+	color:#fff;
+	-webkit-transition: all 0.3s linear;
+	-moz-transition: all 0.3s linear;
+	-o-transition: all 0.3s linear;
+	transition: all 0.3s linear;
+	width: 100%;
+	font-weight: bold;
+	font-size: 17px;
+	padding: 15px 20px;
+	text-align: center;
+	cursor: pointer;
+	border-radius: 6px;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+}
+
+#free-trial form input[type="submit"]:hover {
+	background: transparent;
+	border:2px solid #006666;
+	color:#006666;
+}
+
+#free-trial form textarea {
+	-webkit-transition: all 0.3s linear;
+	-moz-transition: all 0.3s linear;
+	-o-transition: all 0.3s linear;
+	transition: all 0.3s linear;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    font-size: 12px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    background: #fff;
+    height: 100px;
+}
+
+#free-trial form select {
+	display:block;
+}
+
+#free-trial form input[type="checkbox"] {
+	
+}
+
+
 
 /*--- Footer Content ---*/
 
